# MarkTab

./: .gitignore  CLAUDE.md  README.md  design-philosophy.md  index.html  package-lock.json  package.json  run-dev.cmd  test-drawio.drawio  test-markdown-features.md  test-marktab-features.md  vite.config.ts
.claude/: plan.md  settings.local.json
.github/workflows/: build.yml  pages.yml
docs/: feature-list.md
public/: privacy.html
public/js/: viewer.min.js
src/: App.vue  env.d.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: design-philosophy.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/editor/: EditorPane.vue  EmptyState.vue  FileChangeBanner.vue  MarkdownEditor.vue  MarkdownPreview.vue  SessionDetail.vue  StatusBar.vue  TabBar.vue  TabItem.vue  TableOfContents.vue
src/components/layout/: AppLayout.vue  MainPanel.vue  Sidebar.vue
src/components/settings/: AboutDialog.vue  SettingsDialog.vue  UpdateDialog.vue
src/composables/: useAutoSave.ts  useDirectoryTree.ts  useDocumentStats.ts  useExternalFileOpen.ts  useFileDialog.ts  useFileWatcher.ts  useKeyboardShortcuts.ts  useSessions.ts  useSkills.ts  useTableOfContents.ts  useUpdateChecker.ts
src/services/: configService.ts  fileIoService.ts  markdownService.ts
src/stores/: appConfigStore.ts  directoryStore.ts  editorStore.ts  fileStore.ts  tabStore.ts
src/types/: config.ts  directory.ts  file.ts  session.ts  skill.ts  tab.ts
src/utils/: debounce.ts  pathUtils.ts
(+14 files in other folders)
